static/styles.scss
/* ... */
.copySuccess {
  /*text-align: left;*/
  color: green;
}

#play-pause.off {
  background-color: #c0c0c0 !important;
}

#play-pause.on {
  background-color: green !important;
  color: #ffffff;
}

#playerAndButtons button.on {
  background-color: green !important;
  color: #ffffff;
}

#homeLink {
  color: #000;
  text-decoration: None;
  font-size: inherit;
  font-weight: inherit;
}

#copier {
  position: relative;
}

#copyInput {
  width: 100%;
}

#copyInput input {
  border: 1px solid #c0c0c0 !important;
  width: 100%;
  padding: 4px;
}

@media screen and (max-width: 500px) {
  .header-text {
    line-height: 1.2em;
  }
}

@media screen and (max-width: 400px) {
  .flex-header {
    margin-top: -20px;
    width: 100% !important;
  }

  img#elcaLogo {
    width: 290px !important;
  }

  .subTitle {
    width: 80% !important;
  }

  #copyInput {
    width: 95%;
    margin-left: 8px;
  }

  #playSection audio {
    background-position: center;
  }
}

#copyButton {
  position: absolute;
  border: 1px solid #c0c0c0;
  right: 15px;
  z-index: 10;
  padding: 4px;
  background-color: #c0c0c0;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

#playSection audio::-webkit-media-controls-play-button {
  display: none;
}

.tourTable {
  -webkit-overflow-scrolling: touch;
}

hr {
  margin-top: 1rem;
  margin-bottom: 1rem;
  border: 0;
  border-top: 1px solid rgba(0, 0, 0, .1);
}

.qAnda p, .qAndA a {
  font-size: 18px !important;
}

.qAnda span {
  font-weight: bolder;
  font-style: italic;
}

.missionon, .pubon{
  background-color:green !important;
  color:white !important;
}

/* Bootstrap Replica */

.container-fluid {
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

.container {
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

.row {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -15px;
}

.col-md-6 {
  -ms-flex: 0 0 50%;
  flex: 0 0 50%;
  max-width: 50%;
}

.col {
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
}

.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
    position: relative;
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
}

div.project, .project h4, .project p, .project a, .container h3 {
  text-align: center;
}

.project h4 {
  font-weight: 900;
}

.project a, .qAndA a {
  text-decoration: underline;
}

.project img {
  width: 260px;
  margin-top: 2rem;
}

.apperson img {
  height: 328px;
}

.container h3 {
  margin-top: 15px;
  margin-bottom: 15px;
}

p.spacer {
  font-size: 6pt;
  margin-bottom: 0;
}

.inquiryLabel {
  margin-top: 14px;
  padding-top: 0;
}

div.inquiryValidation {
  text-align: right;
  margin-top: 10px;
  max-width: 85%;
}

span.inquiryValidation {
  font-size: 16px;
  margin-right: 38%;
  font-family: Habibi;
  font-style: italic;
}

.flex-header {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  margin-left: 5px;
  padding: 0;
  width: 80%;
}

.nohover {
  margin-left: 26px;
  color: #fff !important;
  font-size: 9pt;
  margin-bottom: 0;
  cursor: text !important;
}

.menu-item a.menu-hover {
  color: '#88c1ff' !important;
}

.menu-hover:hover {
  color: rgb(204, 224, 255) !important;
}

.slide-show {
  height: 400px;
  width: 100%;
  object-fit: contain;
  background-color: rgb(192, 192, 192);
}

div.familyELCA, div.youthELCA, div.givingELCA {
  text-align: center;
  margin: auto;
  padding-top: 0;
}

.staffElca {
  text-align: left;
  margin-bottom: -30px;
  margin-top: 20px;
  display: none;
}

.staffPicture {
  width: 288px;
  display: block;
  margin: auto;
  text-align: center;
}

.staffDescription {
  text-align: left;
  max-width: 8in;
  margin: auto;
  margin-top: 15px;
}

.beliefsELCA, .familyELCA, .newsELCA {
  text-align: center;
  margin: auto;
  padding-top: 0;
}

.table-responsive {
  display: block;
  width: 100%;
  height: 500px;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}

.newsTable {
    width: 320px;
    margin-bottom: 1rem;
    color: #212529;
    table-layout: fixed;
}

.newsTable td {
  width: 50% ;
}

.newsTable td, .newsTable th {
  padding: .75rem;
  vertical-align: top;
}

.newsUrl tbody tr:nth-child(odd) {
  display: table-row;
  background-color: #d8ecf3;
}

.newsUrl tbody tr:nth-child(even) {
  display: table-row;
  background-color: #fff;
}

select {
  width: 120px;
}

